charts and labels corrections

--- a/accounting.html
+++ b/accounting.html
@@ -263,7 +263,7 @@
 									<div class="row">
 										<div class="col-sm-12 col-md-12 col-lg-4">
 											<div class="form-group">
-												<label>Frequency</label>
+												<label>Location</label>
 												<select class="form-control form-control-sm">
 													<option>All</option>
 													<option>Coppell</option>
