--- a/comparison.html
+++ b/comparison.html
@@ -195,9 +195,9 @@
 											<thead>
 												<tr>
 													<th scope="col">Metrics</th>
-													<th scope="col">Coppell<br><strong class="text-success">+75</strong></th>
-													<th scope="col">Mesquite<br><strong class="text-success">+123</strong></th>
-													<th scope="col">Rufe Snow<br><strong class="text-success">+24</strong></th>
+													<th scope="col">Coppell<br></th>
+													<th scope="col">Mesquite<br></th>
+													<th scope="col">Rufe Snow<br></th>
 												</tr>
 											</thead>
 											<tbody>
@@ -243,6 +243,7 @@
 														Average Ticket Price
 													</th>
 													<td>
+														<strong class="text-success">+75</strong><br>
 														1,800<br>
 														26<br>
 														5<br>
@@ -250,6 +251,7 @@
 														$27.35
 													</td>
 													<td>
+														<strong class="text-success">+123</strong><br>
 														1,492<br>
 														43<br>
 														12<br>
@@ -257,6 +259,7 @@
 														$24.21
 													</td>
 													<td>
+														<strong class="text-success">+24</strong><br>
 														766<br>
 														45<br>
 														18<br>
