--- a/index.html
+++ b/index.html
@@ -286,7 +286,8 @@
 												<label>Frequency</label>
 												<select class="form-control form-control-sm">
 													<option>Daily</option>
-													<option>Hourly</option>
+													<option>Weekly</option>
+													<option>Monthly</option>
 												</select>
 											</div>
 										</div>
