--- a/labor.html
+++ b/labor.html
@@ -374,7 +374,7 @@
 									</div>
 									<div class="row">
 										<div class="col-sm-12 col-md-12 col-lg-6">
-											<h5 class="mb-4">Cars Per Labor Hours</h5>
+											<h5 class="mb-4">Cars Per Labor Hour</h5>
 										</div>
 										<div class="col-sm-12 col-md-12 col-lg-6 text-right">
 											<span>Cars: 500</span><br>
