--- a/predictions.html
+++ b/predictions.html
@@ -167,14 +167,14 @@
 											<h5 class="mb-4">Projected Revenue</h5>
 										</div>
 										<div class="col-sm-12 col-md-12 col-lg-6 text-right">
-											<span>We expect Alpine Wash to wash up to 1,450 cars today and add 45 new club members</span><br>
+											<span>We expect Alpine Wash to wash up to 1,450 <br>cars today and add 45 new club members</span><br>
 										</div>
 
 									</div>
 									<div class="row">
 										<div class="col-sm-12 col-md-12 col-lg-4">
 											<div class="form-group">
-												<label>Frequency</label>
+												<label>Location</label>
 												<select class="form-control form-control-sm">
 													<option>All</option>
 													<option>Coppell</option>
@@ -217,7 +217,7 @@
 									<div class="row">
 										<div class="col-sm-12 col-md-12 col-lg-4">
 											<div class="form-group">
-												<label>Frequency</label>
+												<label>Location</label>
 												<select class="form-control form-control-sm">
 													<option>All</option>
 													<option>Coppell</option>
@@ -257,7 +257,7 @@
 									<div class="row">
 										<div class="col-sm-12 col-md-12 col-lg-4">
 											<div class="form-group">
-												<label>Frequency</label>
+												<label>Location</label>
 												<select class="form-control form-control-sm">
 													<option>All</option>
 													<option>Coppell</option>
@@ -289,7 +289,7 @@
 								<div class="card-body">
 									<div class="row">
 										<div class="col-sm-12 col-md-12 col-lg-6">
-											<h5 class="mb-4">Projected Labor % of Sales/h5>
+											<h5 class="mb-4">Projected Labor % of Sales</h5>
 										</div>
 										<div class="col-sm-12 col-md-12 col-lg-6 text-right">
 											
@@ -300,7 +300,7 @@
 									<div class="row">
 										<div class="col-sm-12 col-md-12 col-lg-4">
 											<div class="form-group">
-												<label>Frequency</label>
+												<label>Location</label>
 												<select class="form-control form-control-sm">
 													<option>All</option>
 													<option>Coppell</option>
