--- a/memberships.html
+++ b/memberships.html
@@ -163,10 +163,10 @@
 								<div class="card-body">
 									<div class="row">
 										<div class="col-sm-12 col-md-12 col-lg-6">
-											<h5 class="mb-4">Club Sales</h5>
+											<h5 class="mb-4">Club Members</h5>
 										</div>
 										<div class="col-6 text-right">
-											<span>+30 Club Sales for $1,235</span><br>
+											<span>+30 New Club Members Today</span><br>
 										</div>
 									</div>
 									
@@ -240,7 +240,7 @@
 										<button type="button" class="close" data-dismiss="alert" aria-label="Close">	<span aria-hidden="true">&times;</span>
 										</button>
 									</div>
-									<div class="alert bg-success text-white alert-dismissible fade show" role="alert">Net Membership Impact- $3,500
+									<div class="alert bg-success text-white alert-dismissible fade show" role="alert">Net Membership Sales- $3,500
 										<button type="button" class="close" data-dismiss="alert" aria-label="Close">	<span aria-hidden="true">&times;</span>
 										</button>
 									</div>
@@ -307,7 +307,7 @@
 											<h5 class="mb-4">Club Sales Amount</h5>
 										</div>
 										<div class="col-sm-12 col-md-12 col-lg-6 text-right">
-											
+											<span>+30 Club Sales for $1,235</span><br>
 										</div>
 									</div>
 
