small charts corrections

--- a/predictions.html
+++ b/predictions.html
@@ -228,13 +228,13 @@
 										</div>
 										<div class="col-sm-12 col-md-12 col-lg-4">
 											<div class="form-group">
-												<label>From</label>
+												<label>Month</label>
 												<input class="form-control" type="date">
 											</div>
 										</div>
 										<div class="col-sm-12 col-md-12 col-lg-4">
 											<div class="form-group">
-												<label>To</label>
+												<label>Year</label>
 												<input class="form-control" type="date">
 											</div>
 										</div>
