--- a/kiosk.html
+++ b/kiosk.html
@@ -219,15 +219,14 @@
 									
 									<div class="alert bg-warning text-white alert-dismissible fade show" role="alert">
 										Low Cash On Hand for $1 and $5 bills<br>
-"10/15/2021 1:25 PM - Low cash on hand - Coppell - Lane C2 - Dispenser $1, $23 remaining"
-10/15/2021 2:25 PM - Low cash on hand - Rufe Snow- Lane RS1 - Dispenser $5, $70 remaining"
+										10/15/2021 1:25 PM - Low cash on hand - Coppell - Lane C2 - Dispenser $1, $23 remaining
 
 										<button type="button" class="close" data-dismiss="alert" aria-label="Close">	<span aria-hidden="true">&times;</span>
 										</button>
 									</div>
 									<div class="alert bg-warning text-white alert-dismissible fade show" role="alert">
 										Acceptance Money Withdrawn <br>
-										]10/15/2021 10:25 PM - Acceptance Money Withdrawn- Coppell - Lane C2 $4,325
+										10/15/2021 10:25 PM - Acceptance Money Withdrawn- Coppell - Lane C2 $4,325
 
 										<button type="button" class="close" data-dismiss="alert" aria-label="Close">	<span aria-hidden="true">&times;</span>
 										</button>
