--- a/predictions.html
+++ b/predictions.html
@@ -121,6 +121,13 @@
 							<div class="menu-title">Comparison</div>
 						</a>
 					</li>
+					<li>
+						<a href="site-selection.html" class="">
+							<div class="parent-icon icon-color-1"><i class="bx bx-map-alt"></i>
+							</div>
+							<div class="menu-title">Site Selection</div>
+						</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
