added map maker

--- a/site-selection.html
+++ b/site-selection.html
@@ -212,7 +212,8 @@
 											</div>
                                         </div>
                                         <div class="col-sm-12 col-md-9 col-lg-9">
-                                            <div id="simple-map" class="gmaps" style="height: 600px;"></div>
+                                            <div id="simple-map" class="gmaps" style="display: none;"></div>
+                                            <div id="marker-map" class="gmaps" style="height: 600px;"></div>
                                         </div>
                                     </div>
 								</div>
